--- a/style/style.css
+++ b/style/style.css
@@ -314,7 +314,7 @@ div.cards p {
 div.img1 {
     width: 150px;
     height: 100px;
-    background-image: url("../UIUX.jpg");
+    background-image: url("../Images/UIUX.jpg");
     background-size: 150px;
     background-repeat: no-repeat;
     background-position: center;
@@ -323,7 +323,7 @@ div.img1 {
 div.img2 {
     width: 150px;
     height: 100px;
-    background-image: url('../FrontEnd.jpg');
+    background-image: url('../Images/FrontEnd.jpg');
     background-size: 150px;
     background-repeat: no-repeat;
     background-position: center;
@@ -340,7 +340,7 @@ div.card-2 {
 div.img3 {
     width: 150px;
     height: 100px;
-    background-image: url('../MobileApp.png');
+    background-image: url('../Images/MobileApp.png');
     background-size: 150px;
     background-repeat: no-repeat;
     background-position: center;
